Update Entry Fixed